loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: '(' expected but identifier found.
while not (estFaceMur()){
      ^LoopWhile:5: error: illegal start of simple expression
	}
        ^